--- a/oscar/templates/dashboard/layout.html
+++ b/oscar/templates/dashboard/layout.html
@@ -2,6 +2,7 @@
 {% load currency_filters %}
 {% load category_tags %}
 {% load dashboard_tags %}
+{% load i18n %}
 
 {% block mainstylesheet %}
 	<link rel="stylesheet" href="{{ STATIC_URL }}oscar/css/dashboard.css" />
@@ -10,7 +11,7 @@
 {% block extrahead %} {%endblock extrahead %}
 
 {% block title %}
-Dashboard | {{ block.super }}
+{% trans "Dashboard" %} | {{ block.super }}
 {% endblock %}
 
 {% block layout %}
@@ -22,10 +23,10 @@ Dashboard | {{ block.super }}
                 <ul class="nav pull-right">
                     {% if user.is_authenticated %}
                         <li><span>Welcome <em>{{ user.username }}</em></span></li>
-                        <li><a href="{% url customer:summary %}" class="app-ico ico_profile">Account</a></li>
-        				<li><a href="{% url customer:logout %}" class="app-ico ico_logout">Logout</a></li>
+						<li><a href="{% url customer:summary %}" class="app-ico ico_profile">{% trans "Account" %}</a></li>
+						<li><a href="{% url customer:logout %}" class="app-ico ico_logout">{% trans "Logout" %}</a></li>
                     {% else %}
-                        <li><a href="{% url customer:login %}" class="app-ico ico_logout">Login</a></li>
+					<li><a href="{% url customer:login %}" class="app-ico ico_logout">{% trans "Login" %}</a></li>
                     {% endif %}
                 </ul>
             </div>
@@ -59,7 +60,7 @@ Dashboard | {{ block.super }}
 			
 			{% block breadcrumbs %}
 			<ul class="breadcrumb">
-                <li><a href="{% url dashboard:index %}">Dashboard</a> <span class="divider">/</span></li>
+				<li><a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a> <span class="divider">/</span></li>
             </ul>
             {% endblock %}
             
