--- a/oscar/templates/dashboard/offers/offer_list.html
+++ b/oscar/templates/dashboard/offers/offer_list.html
@@ -1,23 +1,24 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block title %}
-Offer management | {{ block.super }}
+{% trans "Offer management" %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url promotions:home %}">Dashboard</a>
+	<a href="{% url promotions:home %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Offer management</a></li>
+	<li class="active"><a href=".">{% trans "Offer management" %}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-    <h1>Offer management</h1>
+	<h1>{% trans "Offer management" %}</h1>
 </div>
 {% endblock header %}
 
@@ -28,12 +29,12 @@ Offer management | {{ block.super }}
     </div>
     <form action="." method="get" class="form-inline">
 		{% include 'partials/form_fields_inline.html' with form=form %}
-        <button type="submit" class="btn btn-primary">Search</button>
-		<a href="{% url dashboard:offer-list %}" class="btn">Reset</a>
+		<button type="submit" class="btn btn-primary">{% trans "Search" %}</button>
+		<a href="{% url dashboard:offer-list %}" class="btn">{% trans "Reset" %}</a>
     </form>
 </div>
 
-<p><a href="{% url dashboard:offer-metadata %}" class="btn-large btn-primary">Create new offer</a></p>
+<p><a href="{% url dashboard:offer-metadata %}" class="btn-large btn-primary">{% trans "Create new offer" %}</a></p>
 
 	<div class="sub-header">
 		<h2>{{ queryset_description }}</h2>
@@ -43,28 +44,28 @@ Offer management | {{ block.super }}
 			{% csrf_token %}
 			<table class="table table-striped table-bordered">
 				<tr>
-					<th>Offer name</th>
-					<th>Status</th>
-					<th>Start date</th>
-					<th>End date</th>
-					<th>Condition</th>
-					<th>Benefit</th>
-					<th>Date created</th>
+					<th>{% trans "Offer name" %}</th>
+					<th>{% trans "Status" %}</th>
+					<th>{% trans "Start date" %}</th>
+					<th>{% trans "End date" %}</th>
+					<th>{% trans "Condition" %}</th>
+					<th>{% trans "Benefit" %}</th>
+					<th>{% trans "Date created" %}</th>
 					<th></th>
 				</tr>
 				{% for offer in offers %}
 				<tr>
 					<td><a href="{{ offer.get_absolute_url }}">{{ offer.name }}</a></td>
-					<td>{% if offer.is_active %}Active{% else %}Inactive{% endif %}</td>
+					<td>{% if offer.is_active %}{% trans "Active" %}{% else %}{% trans "Inactive" %}{% endif %}</td>
 					<td>{{ offer.start_date }}</td>
 					<td>{{ offer.end_date }}</td>
 					<td>{{ offer.condition.description }}</td>
 					<td>{{ offer.benefit.description }}</td>
 					<td>{{ offer.date_created }}</td>
 					<td>
-						<a class="btn btn-info" href="{% url dashboard:offer-detail offer.pk %}">Stats</a>
-						<a class="btn btn-primary" href="{% url dashboard:offer-metadata offer.pk %}">Edit</a>
-						<a class="btn btn-danger" href="{% url dashboard:offer-delete offer.pk %}">Delete</a>
+						<a class="btn btn-info" href="{% url dashboard:offer-detail offer.pk %}">{% trans "Stats" %}</a>
+						<a class="btn btn-primary" href="{% url dashboard:offer-metadata offer.pk %}">{% trans "Edit" %}</a>
+						<a class="btn btn-danger" href="{% url dashboard:offer-delete offer.pk %}">{% trans "Delete" %}</a>
 					</td>
 				</tr>
 				{% endfor %}
@@ -74,6 +75,6 @@ Offer management | {{ block.super }}
 			{% endif %}
 		</form>
 	{% else %}
-		<p>No offers found.</p>
+	<p>{% trans "No offers found." %}</p>
 	{% endif %}
 {% endblock dashboard_content %}
