--- a/oscar/templates/partials/nav_primary.html
+++ b/oscar/templates/partials/nav_primary.html
@@ -10,7 +10,7 @@
             </a>
             <a class="btn btn-navbar app-ico ico_shop_bag btn-cart hidden" href="{% url checkout:index %}">
                 <strong>Basket 
-                {% if request.basket.lines.count %}
+                {% if request.basket.all_lines.count %}
                     Total: {{ basket.total_incl_tax|currency }}
                 {% endif %}
                 </strong>
