--- a/oscar/templates/customer/anon-order.html
+++ b/oscar/templates/customer/anon-order.html
@@ -55,8 +55,8 @@
         <th>{% trans 'Product' %}</th>
         <th>{% trans 'Availability' %}</th>
         <th>{% trans 'Quantity' %}</th>
-        <th>{% trans 'Line price excl' %} tax</th>
-        <th>{% trans 'Line price incl tax' %}</th>
+        <th>{% trans 'Line price excl. tax' %} tax</th>
+        <th>{% trans 'Line price incl. tax' %}</th>
         <th>{% trans 'Status' %}</th>
         <th></th>
     </tr>
